--- a/src/styles/Calendar.css
+++ b/src/styles/Calendar.css
@@ -56,21 +56,31 @@
     grid-template-columns: repeat(7,1fr);
     gap: 8px;
 }
-/* @media (max-width:600px ) {
-    .calendar{
-        width: 480px;
-        padding: 20px;
-        margin: 10px;
-    }
 
+/*עיצוב מסכים קטנים*/
+
+/* @media (max-width:600px) {
     .calendar-control {
-        font-size: 20px;
-        width: 480px;
+        flex-direction: column;
+        align-items: center;
     }
 
     .yearView{
-        font-size: 14px;
-        width: 480px;
+        flex-direction: row;
     }
-    
+    .monthView{
+        flex-direction: row;    
+    }
+    .daysView{
+        flex-direction: column;
+    }
+    .calendar-title{
+        font-size: 1rem;
+    }
+    .button{
+        width: 100%;
+        max-width: 250px;
+    }
+
 } */
+
