--- a/src/styles/Calendar.css
+++ b/src/styles/Calendar.css
@@ -56,6 +56,10 @@
     grid-template-columns: repeat(7,1fr);
     gap: 8px;
 }
+.shared-view{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 /*עיצוב מסכים קטנים*/
 
