--- a/src/styles/YearView.css
+++ b/src/styles/YearView.css
@@ -1,14 +1,33 @@
-.year-view {
-    display: grid;
+.year-grid {
+    display: flex;
+    flex-wrap: wrap;
     grid-template-columns: repeat(2, 1fr);
-    gap:20px;
-    padding: 20px;
+    gap:10px;
+    justify-content: center;
     border: 1px solid blue;
+}
+
+.month{
+    width: 70px;
+    height: 70px;
+    background-color: mediumaquamarine;
+    text-align: center;
+    line-height: 70px;
+    border-radius: 10px;
+    font-weight: bold;
+    transition: 0.3s ease;
+}
+@media screen and (max-width:768px) {
+    .year-view{
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 h1{
     text-align: center;
     color: skyblue;
 }
+
 
 
